apps/base/wgportal/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wgportal
spec:
  selector:
    matchLabels:
      app: wgportal
  template:
    metadata:
      labels:
        app: wgportal
    spec:
      containers:
        - name: wgportal
          image: wgportal/wg-portal:v2
          ports:
            - name: dashboard
              containerPort: 8888
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 200m
              memory: 200M
          volumeMounts:
            - name: peers
              mountPath: /etc/wireguard
              readOnly: false
            - name: config
              mountPath: /app/config/config.yml
              readOnly: true
              subPath: config.yml
        - name: wireguard
          image: lscr.io/linuxserver/wireguard:latest
          ports:
            - name: wireguard
              containerPort: 51820
          securityContext:
            capabilities:
              add:
                - SYS_MODULE
                - NET_ADMIN
            sysctls:
              - name: net.ipv4.ip_forward
                value: "1"
              - name: net.ipv4.conf.all.forwarding
                value: "1"
              - name: net.ipv4.conf.all.src_valid_mark
                value: "1"
          resources:
            requests:
              cpu: 100m
              memory: 100M
            limits:
              cpu: 200m
              memory: 200M
          volumeMounts:
            - name: kernel
              mountPath: /lib/modules
              readOnly: false
            - name: peers
              mountPath: /etc/wireguard
              readOnly: true # Prevents wireguard from writing these itself
      volumes:
        - name: peers
          persistentVolumeClaim:
            claimName: wgportal
            readOnly: false
        - name: config
          configMap:
            name: wgportal
        # Needed to properly load iptables
        - name: kernel
          hostPath:
            path: /lib/modules
            type: Directory
