apps/base/wgportal/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wgportal
  labels:
    app: wgportal
spec:
  selector:
    app: wgportal
  ports:
    - name: wireguard
      port: 51820
      targetPort: 51820
      protocol: UDP
    - name: dashboard
      port: 8888
      targetPort: 8888
      protocol: TCP
    - name: metrics
      port: 8787
      targetPort: 8787
      protocol: TCP
